--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@ section.your-result .container-summary button{
     width: 80%;
     max-width: 300px;
     padding: 15px 0;
+    position: relative;
+    left: 20px;
+    top: 15px;
     background-color: #303b59;
     border-radius: 50px;
     border: hidden;
